@@ -1,3 +1,8 @@
+2011-04-18  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* util/grub-mkimage.c (generate_image): Update fwstart.img hash after
+	performing the necessary test.
+
 2011-04-17  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* Makefile.am (multiboot.elf): Add -Wl,--build-id=none.
